--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,5 @@
 html, body {
-    font-size: 14px;
+    font-size: 1em;
     font-family: "Tahoma Regular", Tahoma, "Tahoma-Regular", "Verdana-Regular", Verdana, "Verdana Regular", Geneva, sans-serif;
     letter-spacing: 0;
     line-height: 1;
@@ -20,12 +20,42 @@ b {
     line-height: 1;
 }
 
-p, input, span, a {
+p, input, span, a, pre {
     font-family: "Tahoma Regular", Tahoma, "Tahoma-Regular", "Verdana", Verdana, Geneva, sans-serif;
     font-weight: 400;
     letter-spacing: 0;
     line-height: 1;
-    font-size: 1em;
+}
+
+@media (max-width: 960px) and (min-width: 721px) {
+    html, body, .content {
+        font-size: 0.90em;
+    }
+}
+@media (max-width: 720px) and (min-width: 640px) {
+    html, body, .content {
+        font-size: 0.85em;
+    }
+}
+@media (max-width: 640px) and (min-width: 481px) {
+    html, body, .content {
+        font-size: 0.80em;
+    }
+}
+@media (max-width: 480px) and (min-width: 361px) {
+    html, body, .content {
+        font-size: 0.75em;
+    }
+}
+@media (max-width: 360px) and (min-width: 241px) {
+    html, body, .content {
+        font-size: 0.70em;
+    }
+}
+@media (max-width: 240px) {
+    html, body, .content {
+        font-size: 0.65em;
+    }
 }
 
 /* VERDANA */
