--- a/css/main.css
+++ b/css/main.css
@@ -49,12 +49,21 @@ div {
 
 #header {
     position: fixed;
-    top: 0;
+    top: 1.1%;
     left: 0;
     right: 0;
-    height: 25%;
-    z-index: 2;
+    height: 7%;
+    z-index: 20;
     overflow: hidden;
+    text-align: center;
+}
+
+.header-logo, .header-logo > img {
+    display: block;
+    position: relative;
+    height: 100%;
+    width: auto;
+    margin: 0 auto;
 }
 
 #footer {
@@ -72,8 +81,8 @@ div {
 
 .footer-text {
     color: #adadad;
-    margin: 1em;
-    font-size: 1em;
+    margin: 0 0 0.5em 0;
+    font-size: 0.8em;
     letter-spacing: 0;
     display: inline-block;
 }
