--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -25,6 +25,7 @@ p, input, span, a, pre {
     font-weight: 400;
     letter-spacing: 0;
     line-height: 1;
+    word-break: break-all;
 }
 
 @media (max-width: 960px) and (min-width: 721px) {
